ops/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iam-system
  labels:
    name: iam-system
    app.kubernetes.io/name: iam-server
    app.kubernetes.io/version: "1.0.0"
